# MinVR3-UnityPackage

./: .gitignore  LICENSE.md  MinVR-Default.inputactions  NOTICE  README.md  README_DOCUMENTATION.md  README_INSTALL.md  index.html  index.json  manifest.json  package.json  xrefmap.yml
.github/: publish-docs.yaml
.github/workflows/: docs.yml
DocumentationSrc~/: .gitignore  README.md  build-docs  docfx.json  filterConfig.yml  index.md  projectMetadata.json  toc.yml
DocumentationSrc~/api/: index.md
DocumentationSrc~/apidocs-overrides/: IVLab.Template.md
DocumentationSrc~/manual/: 01-intro.md  02-install.md  03-plugin-packages.md  10-vr-coord-spaces.md  11-vrconfigs.md  12-vrevents.md  13-input-devices.md  14-display-devices.md  15-remote-connections.md  16-cluster.md  20-interaction.md  changelog.md  concept1.md  concept2.md  intro.md  license.md  toc.yml  tutorial-basic-bimanual-manipulation.md
Documentation~/: index.html  index.json  manifest.json
Documentation~/api/: Global.CavePaintingBrushCursor.html  Global.SharedToken.html  Global.TouchscreenState.TouchInputPhase.html  Global.TouchscreenState.html  Global.TransformExtensions.html  Global.html  IVLab.MinVR3.BasicHighlighter.html  IVLab.MinVR3.BasicObjectSelector.SelectionMode.html  IVLab.MinVR3.BasicObjectSelector.html  IVLab.MinVR3.BimanualObjectSelector.html  IVLab.MinVR3.CallableEventProducer.html  IVLab.MinVR3.ClusterClient.html  IVLab.MinVR3.Condition.html  IVLab.MinVR3.CoordConversion.CoordSystem.Axis.html  IVLab.MinVR3.CoordConversion.CoordSystem.Handedness.html  IVLab.MinVR3.CoordConversion.CoordSystem.html  IVLab.MinVR3.CoordConversion.html  IVLab.MinVR3.DrawEyes.html  IVLab.MinVR3.DrawFPS.html  IVLab.MinVR3.DrawTrackers.TrackerDescription.html  IVLab.MinVR3.DrawTrackers.html  IVLab.MinVR3.FSM.html  IVLab.MinVR3.FakeTrackers.html  IVLab.MinVR3.FloatingMenu.html  IVLab.MinVR3.HttpWebSocketVREventConnection.html  IVLab.MinVR3.IClusterNode.html  IVLab.MinVR3.IPolledInputDevice.html  IVLab.MinVR3.IVREventConnection.VREventReceivedDelegate.html  IVLab.MinVR3.IVREventConnection.html  IVLab.MinVR3.IVREventListener.html  IVLab.MinVR3.IVREventPrototype.html  IVLab.MinVR3.InputActionsToVREvents.html  IVLab.MinVR3.KeyboardState.html  IVLab.MinVR3.MinVRController.html  (+78 more)
Editor/: IVLab.MinVR3.Editor.asmdef
Editor/Input/: FSMEditor.cs  (+6 more)
MinVR3.cpp~/: CMakeLists.txt  README.md
MinVR3.cpp~/apps/minvr3_echo_client/: CMakeLists.txt  main.cpp
MinVR3.cpp~/apps/test_config/: CMakeLists.txt  example-minvr3-config.txt  main.cpp
MinVR3.cpp~/apps/test_server/: CMakeLists.txt  main.cpp
MinVR3.cpp~/src/: CMakeLists.txt  config_val.cpp  config_val.h  min_net.cpp  min_net.h  minvr3.h  minvr3_net.cpp  minvr3_net.h  minvr3_utils.cpp  minvr3_utils.h  net_headers.h  vr_event.cpp  vr_event.h
MinVR3.js~/: README.md  package-lock.json  package.json  rollup.config.js
MinVR3.py~/: README.md  pyproject.toml
MinVR3.py~/minvr3/: __init__.py  minvr3_net.py  vr_event.py
MinVR3.py~/minvr3/apps/: relay_server.py  simple_client.py  simple_server.py
MinVR3.py~/minvr3/apps/tests/: canned_client.py  test_client.py  test_consts.py  test_server.py
Runtime/: IVLab.MinVR3.Runtime.asmdef  MinVR.cs
Samples~/: IVLab.MinVR3.Samples.asmdef
api/: ES.FisheyeRenderer.Resolution.html  ES.FisheyeRenderer.html  ES.html  Global.CavePaintingBrushCursor.html  Global.Matrix4x4Extensions.html  Global.SharedToken.html  Global.TouchscreenState.TouchInputPhase.html  Global.TouchscreenState.html  Global.TransformExtensions.html  Global.html  IVLab.MinVR3.BasicHighlighter.html  IVLab.MinVR3.BasicObjectSelector.SelectionMode.html  IVLab.MinVR3.BasicObjectSelector.html  IVLab.MinVR3.BimanualObjectManipulator.html  IVLab.MinVR3.BimanualObjectSelector.html  IVLab.MinVR3.BoundsHighlighter.html  IVLab.MinVR3.CallableEventProducer.html  IVLab.MinVR3.CameraRigSettings.html  IVLab.MinVR3.CavePaintingBrushCursor.html  IVLab.MinVR3.ClusterClient.html  IVLab.MinVR3.ClusterServer.html  IVLab.MinVR3.ColorPicker.html  IVLab.MinVR3.Condition.html  IVLab.MinVR3.ConfigVal.html  IVLab.MinVR3.ConnectionVREventListener.html  IVLab.MinVR3.ConnectionVREventProducer.html  IVLab.MinVR3.CoordConversion.CoordSystem.Axis.html  IVLab.MinVR3.CoordConversion.CoordSystem.Handedness.html  IVLab.MinVR3.CoordConversion.CoordSystem.html  IVLab.MinVR3.CoordConversion.html  IVLab.MinVR3.DebugDraw.html  IVLab.MinVR3.DrawEyes.html  IVLab.MinVR3.DrawFPS.html  IVLab.MinVR3.DrawGUIText.html  IVLab.MinVR3.DrawTrackers.TrackerDescription.html  IVLab.MinVR3.DrawTrackers.html  IVLab.MinVR3.FSM.html  IVLab.MinVR3.FSMEditor.html  IVLab.MinVR3.FaceCamera.html  IVLab.MinVR3.FakeTrackers.html  (+159 more)
manual/: 01-intro.html  02-install.html  03-plugin-packages.html  10-vr-coord-spaces.html  11-vrconfigs.html  12-vrevents.html  13-input-devices.html  14-display-devices.html  15-remote-connections.html  16-cluster.html  20-interaction.html  changelog.html  concept1.html  concept2.html  install.html  intro.html  license.html  tutorial-basic-bimanual-manipulation.html
(+363 files in other folders)
